just a little fix in the layout.css file, changing the gap between the items in the nav bar and adding a hover effect to the cards and actions links.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -19,7 +19,6 @@ nav {
 .logo {
     display: flex;
     align-items: center;
-    padding: 0, 10px;
 }
 .content {
     display: flex;
